<resources>
    <string name="app_name">arduino_control</string>
    <string name="button">Button</string>
    <string name="switch1">Switch</string>
    <string name="led">LED</string>
    <string name="fan">Fan</string>
    <string name="size_is">Size is</string>
    <string name="swioff">Off</string>
    <string name="swion">On</string>
    <string name="ardms">\"Arduino Message : \"</string>
    <string name="visual_led">Visual LED</string>
    <string name="toggle">Toggle</string>
    <string name="connect">Connect</string>
    <string name="voice_mode">Speech Mode</string>
    <string name="initiate_voice_mode">Initiate Voice Mode</string>
</resources>